--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {
     "scrolled": false
    },
@@ -19,15 +19,16 @@
       "Счёт 510-11 - добавлено документов: 0\n",
       "Счёт 510-1 - добавлено документов: 0\n",
       "Счёт 510-5 - добавлено документов: 0\n",
-      "Счёт 761-0 - добавлено документов: 13\n",
-      "Счёт 760-53 - добавлено документов: 3\n",
-      "Добавлено операций купли-продажи ценных бумаг: 3\n",
+      "Счёт 761-0 - добавлено документов: 0\n",
+      "Счёт 760-53 - добавлено документов: 0\n",
+      "Добавлено операций купли-продажи ценных бумаг: 0\n",
       "Счёт 761-3 - добавлено документов: 0\n",
       "Счёт 760-53 - добавлено документов: 0\n",
       "Добавлено операций купли-продажи ценных бумаг: 0\n",
-      "Счёт 761-4 - добавлено документов: 1\n",
+      "Счёт 761-4 - добавлено документов: 0\n",
       "Счёт 760-53 - добавлено документов: 0\n",
-      "Добавлено операций купли-продажи ценных бумаг: 3\n"
+      "Добавлено операций купли-продажи ценных бумаг: 0\n",
+      "Счёт 760-31 - добавлено документов: 0\n"
      ]
     }
    ],
@@ -253,7 +254,6 @@
     "    json = json['{report577p_v1}Подробности9_Collection']['{report577p_v1}Подробности9']\n",
     "    security_deals = pd.DataFrame(json)\n",
     "\n",
-    "\n",
     "    # Обработка данных\n",
     "    security_deals = security_deals[['NameBeg9', 'curs_datebeg9', 'currency_ISO9',\n",
     "                                     'NameEnd9', 'currency_paym7', 'deal_cost7',\n",
@@ -262,17 +262,20 @@
     "                              'amount', 'accumulated_coupon', 'deal_сommission', 'bank_сommission', 'deal_code']\n",
     "    security_deals.loc[:, 'date'] = pd.to_datetime(\n",
     "        security_deals.loc[:, 'date'], format='%Y-%m-%d').dt.normalize()\n",
-    "    security_deals.loc[:, 'security'] = security_deals.security.apply(lambda x: x[-12:])\n",
+    "    security_deals.loc[:, 'security'] = security_deals.security.apply(\n",
+    "        lambda x: x[-12:])\n",
     "    security_deals.loc[:, 'quantity'] = security_deals.apply(\n",
     "        lambda x: x.quantity if x.deal_type == 'Покупка' else -x.quantity, axis=1)\n",
     "    security_deals.loc[:, 'amount'] = security_deals.apply(\n",
     "        lambda x: x.amount if x.deal_type == 'Покупка' else -x.amount, axis=1)\n",
     "    security_deals.loc[:, 'accumulated_coupon'] = security_deals.apply(\n",
     "        lambda x: x.accumulated_coupon if x.deal_type == 'Покупка' else -x.accumulated_coupon, axis=1)\n",
-    "    security_deals.loc[:, 'сommission'] = security_deals.deal_сommission + security_deals.bank_сommission\n",
-    "    security_deals = security_deals.iloc[:,[0,1,3,4,5,8,9]]\n",
+    "    security_deals.loc[:, 'сommission'] = security_deals.deal_сommission + \\\n",
+    "        security_deals.bank_сommission\n",
+    "    security_deals = security_deals.iloc[:, [0, 1, 3, 4, 5, 8, 9]]\n",
     "\n",
     "    return security_deals\n",
+    "\n",
     "\n",
     "def new_security_deals(security_deals):\n",
     "    \"\"\"Подготовка таблицы для загрузки.\"\"\"\n",
@@ -285,7 +288,8 @@
     "            WHERE ((([003_Факты].transaction_code) Is Not Null) AND \\\n",
     "                    ([004_Проводки].СинтСчётНом=581 Or [004_Проводки].СинтСчётНом=582 Or [004_Проводки].СинтСчётНом=662))'\n",
     "    base = pd.read_sql(SQL, conn)\n",
-    "    security_deals = security_deals[~security_deals.deal_code.isin(base['transaction_code'])]\n",
+    "    security_deals = security_deals[~security_deals.deal_code.isin(\n",
+    "        base['transaction_code'])]\n",
     "    security_deals = security_deals[security_deals.date >= start_date]\n",
     "\n",
     "    SQL = 'SELECT СинтСчётНом AS syn_acc, АналСчётНом AS anal_acc, acc_code \\\n",
@@ -341,7 +345,30 @@
     "    print('Добавлено операций купли-продажи ценных бумаг: {}'.format(len(security_deals)))\n",
     "\n",
     "\n",
-    "def upload_data(syn_acc, anal_acc, transactions, beg='2020-04-01'):\n",
+    "def reg_transactions(syn_acc, anal_acc, beg='2020-04-01'):\n",
+    "    conn = pyodbc.connect(conn_str)\n",
+    "    SQL = 'SELECT [003_Факты].Дата,\\\n",
+    "            Sum([004_Проводки].Оборот) AS [Sum-Оборот], [004_Проводки].АналСчётНом \\\n",
+    "            FROM 003_Факты INNER JOIN 004_Проводки ON [003_Факты].ФактНом = [004_Проводки].ФактНом \\\n",
+    "            GROUP BY [004_Проводки].СинтСчётНом, [004_Проводки].АналСчётНом, [003_Факты].Дата \\\n",
+    "            HAVING  [004_Проводки].СинтСчётНом={} AND \\\n",
+    "                    [004_Проводки].АналСчётНом={} AND \\\n",
+    "                    [003_Факты].Дата >={} AND \\\n",
+    "                    Sum([004_Проводки].Оборот)<>0'.format(syn_acc, anal_acc, beg)\n",
+    "    base = pd.read_sql(SQL, conn)\n",
+    "    base.columns = ['date', 'amount', 'description']\n",
+    "    base.amount = -base.amount\n",
+    "    base.description = base.description.apply(lambda x: str(x))\n",
+    "    conn.close()\n",
+    "\n",
+    "    return base\n",
+    "\n",
+    "\n",
+    "def upload_data(syn_acc, anal_acc, tr=None, beg='2020-04-01'):\n",
+    "    if type(tr) != type(None):\n",
+    "        transactions = tr\n",
+    "    else:\n",
+    "        transactions = reg_transactions(syn_acc, anal_acc, beg)\n",
     "    upload_to_base(syn_acc, anal_acc, transactions, beg)\n",
     "    if len(new_transactions(syn_acc, anal_acc, transactions, beg)) > 0:\n",
     "        display(new_transactions(syn_acc, anal_acc, transactions, beg))\n",
@@ -350,52 +377,52 @@
     "# Загрузка списка операций по мастер-счёту\n",
     "path = r'Георгий/Договор комплексного обслуживания/ГМС'\n",
     "transactions = vtb_bank_details(path)\n",
-    "upload_data(510, 6, transactions)\n",
+    "upload_data(510, 6, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по мастер-счёту Алены\n",
     "path = r'Алена/МС'\n",
     "transactions = vtb_bank_details(path)\n",
-    "upload_data(510, 7, transactions)\n",
+    "upload_data(510, 7, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по накопительному счёту\n",
     "path = r'Георгий/Договор комплексного обслуживания/Копилка'\n",
     "transactions = vtb_bank_details(path)\n",
-    "upload_data(510, 12, transactions)\n",
+    "upload_data(510, 12, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по накопительному счёту Алены\n",
     "path = r'Алена/Копилка'\n",
     "transactions = vtb_bank_details(path)\n",
-    "upload_data(510, 9, transactions)\n",
+    "upload_data(510, 9, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по кредитной карте\n",
     "path = r'Георгий/Договор комплексного обслуживания/КК'\n",
     "transactions = vtb_bank_details(path)\n",
-    "upload_data(661, 1, transactions)\n",
+    "upload_data(661, 1, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по Сбербанку Егора\n",
     "path = r'Егор/'\n",
     "transactions = sberbank_details(path)\n",
-    "upload_data(510, 11, transactions)\n",
+    "upload_data(510, 11, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций предпринимательскому счёту\n",
     "path = r'Выписки/'\n",
     "transactions = ip_vtb_bank_details(path)\n",
-    "upload_data(510, 1, transactions)\n",
+    "upload_data(510, 1, tr=transactions)\n",
     "\n",
     "# Загрузка списка операций по Сбербанку Алены\n",
     "path = r'Алена/'\n",
     "transactions = sberbank_details(path)\n",
-    "upload_data(510, 5, transactions)\n",
+    "upload_data(510, 5, tr=transactions)\n",
     "\n",
     "# Загрузка операций по брокерскому счёту Егора\n",
     "path = r'Георгий/Брокерские отчёты XML/Основной'\n",
     "transactions = read_vtb_broker_reports(path)\n",
     "data = transactions[transactions.description !=\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(761, 0, data, beg='2020-01-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(761, 0, tr=data, beg='2020-01-01')\n",
     "data = transactions[transactions.description ==\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(760, 53, tr=data, beg='2020-01-01')\n",
     "security_deals = vtb_broker_security_deals(path)\n",
     "security_deals_upload_to_base(security_deals)\n",
     "\n",
@@ -403,11 +430,11 @@
     "path = r'Георгий/Брокерские отчёты XML/ИИС'\n",
     "transactions = read_vtb_broker_reports(path)\n",
     "data = transactions[transactions.description !=\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(761, 3, data, beg='2020-01-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(761, 3, tr=data, beg='2020-01-01')\n",
     "data = transactions[transactions.description ==\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(760, 53, tr=data, beg='2020-01-01')\n",
     "security_deals = vtb_broker_security_deals(path)\n",
     "security_deals_upload_to_base(security_deals)\n",
     "\n",
@@ -415,178 +442,53 @@
     "path = r'Алена/Брокерские отчёты XML'\n",
     "transactions = read_vtb_broker_reports(path)\n",
     "data = transactions[transactions.description !=\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(761, 4, data, beg='2020-09-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(761, 4, tr=data, beg='2020-01-01')\n",
     "data = transactions[transactions.description ==\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "                    'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(760, 53, tr=data, beg='2020-01-01')\n",
     "security_deals = vtb_broker_security_deals(path)\n",
-    "security_deals_upload_to_base(security_deals)"
+    "security_deals_upload_to_base(security_deals)\n",
+    "\n",
+    "# Списание расходов\n",
+    "upload_data(760, 31, beg='2020-08-01')  # Профсоюз"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "112826.1"
+       "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = new_transactions(761, 0, transactions)\n",
-    "df.amount.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>-445.16</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>-1336.27</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>-441.04</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>-441.19</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>-441.35</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>851</td>\n",
-       "      <td>2020-09-11</td>\n",
-       "      <td>-393.50</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>860</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>-225.62</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>862</td>\n",
-       "      <td>2020-09-15</td>\n",
-       "      <td>-220.18</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>869</td>\n",
-       "      <td>2020-09-16</td>\n",
-       "      <td>-220.23</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>870</td>\n",
-       "      <td>2020-09-17</td>\n",
-       "      <td>-227.96</td>\n",
-       "      <td>Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>186 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          date   amount  \\\n",
-       "2   2020-01-02  -445.16   \n",
-       "3   2020-01-03 -1336.27   \n",
-       "9   2020-01-06  -441.04   \n",
-       "10  2020-01-07  -441.19   \n",
-       "15  2020-01-08  -441.35   \n",
-       "..         ...      ...   \n",
-       "851 2020-09-11  -393.50   \n",
-       "860 2020-09-14  -225.62   \n",
-       "862 2020-09-15  -220.18   \n",
-       "869 2020-09-16  -220.23   \n",
-       "870 2020-09-17  -227.96   \n",
-       "\n",
-       "                                                                     description  \n",
-       "2    Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "3    Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "9    Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "10   Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "15   Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "..                                                                           ...  \n",
-       "851  Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "860  Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "862  Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "869  Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "870  Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹  \n",
-       "\n",
-       "[186 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = transactions[transactions.description ==\n",
-    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
-    "data"
+    "conn = pyodbc.connect(conn_str)\n",
+    "syn_acc = 760\n",
+    "anal_acc = 31\n",
+    "SQL =  'SELECT [003_Факты].Дата,\\\n",
+    "        Sum([004_Проводки].Оборот) AS [Sum-Оборот], [004_Проводки].АналСчётНом \\\n",
+    "        FROM 003_Факты INNER JOIN 004_Проводки ON [003_Факты].ФактНом = [004_Проводки].ФактНом \\\n",
+    "        GROUP BY [004_Проводки].СинтСчётНом, [004_Проводки].АналСчётНом, [003_Факты].Дата \\\n",
+    "        HAVING  [004_Проводки].СинтСчётНом={} AND \\\n",
+    "                [004_Проводки].АналСчётНом={} AND \\\n",
+    "                [003_Факты].Дата >=#7/1/2020# AND \\\n",
+    "                Sum([004_Проводки].Оборот)<>0'.format(syn_acc, anal_acc)\n",
+    "base = pd.read_sql(SQL, conn)\n",
+    "base.columns = ['date', 'amount', 'description']\n",
+    "conn.close()\n",
+    "\n",
+    "t=None\n",
+    "s = base\n",
+    "type(s) == type(None)"
    ]
   },
   {
@@ -634,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +561,7 @@
     "conn.close()\n",
     "\n",
     "#Запрос\n",
-    "date = '2020-09-23'\n",
+    "date = '2020-09-24'\n",
     "start = 0\n",
     "req = {'history_secs':\n",
     "       'http://iss.moex.com/iss/history/engines/%(engine)s/markets/%(market)s/boards/%(board)s/securities.json?date=%(date)s&start=%(start)s'}\n",
