--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {
     "scrolled": false
    },
@@ -19,15 +19,15 @@
       "Счёт 510-11 - добавлено документов: 0\n",
       "Счёт 510-1 - добавлено документов: 0\n",
       "Счёт 510-5 - добавлено документов: 0\n",
-      "Счёт 761-0 - добавлено документов: 0\n",
-      "Счёт 760-53 - добавлено документов: 0\n",
-      "Добавлено операций купли-продажи ценных бумаг: 0\n",
+      "Счёт 761-0 - добавлено документов: 14\n",
+      "Счёт 760-53 - добавлено документов: 2\n",
+      "Добавлено операций купли-продажи ценных бумаг: 1\n",
       "Счёт 761-3 - добавлено документов: 0\n",
       "Счёт 760-53 - добавлено документов: 0\n",
       "Добавлено операций купли-продажи ценных бумаг: 0\n",
-      "Счёт 761-4 - добавлено документов: 3\n",
+      "Счёт 761-4 - добавлено документов: 6\n",
       "Счёт 760-53 - добавлено документов: 0\n",
-      "Добавлено операций купли-продажи ценных бумаг: 2\n",
+      "Добавлено операций купли-продажи ценных бумаг: 1\n",
       "Счёт 760-31 - добавлено документов: 0\n"
      ]
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,11 +510,11 @@
     "\n",
     "# Подготовка датафрейма для загрузки\n",
     "data = {\n",
-    "    'name': 'Потребительские расходы',\n",
-    "    'date': '20.09.2020',\n",
+    "    'name': 'Плата за жильё',\n",
+    "    'date': '02.09.2020',\n",
     "    'amount': 500,\n",
-    "    'ds': 430,\n",
-    "    'da': 5,\n",
+    "    'ds': 600,\n",
+    "    'da': 18,\n",
     "    'dq': 'Null',\n",
     "    'cs': 501,\n",
     "    'ca': 2,\n",
@@ -536,7 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +568,7 @@
     "conn.close()\n",
     "\n",
     "#Запрос\n",
-    "date = '2020-09-24'\n",
+    "date = '2020-09-29'\n",
     "start = 0\n",
     "req = {'history_secs':\n",
     "       'http://iss.moex.com/iss/history/engines/%(engine)s/markets/%(market)s/boards/%(board)s/securities.json?date=%(date)s&start=%(start)s'}\n",
