Update SQL Lite DB.ipynb

--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,21 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "conn = sqlite3.connect('example.db')"
+    "file = 'C:/Users/gdoku/YandexDisk/Компания/07 Учётные регистры и первичные документы/accounting.db'\n",
+    "conn = sqlite3.connect(file)\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "# Создадим таблицы данных\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS sc_types (\\\n",
+    "              sc_type_id INTEGER,\\\n",
+    "              sc_type TEXT NOT NULL UNIQUE,\\\n",
+    "              PRIMARY KEY (sc_type_id))'\n",
+    "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS subcounts ( \\\n",
+    "              subcount_id INTEGER, \\\n",
+    "              sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id), \\\n",
+    "              sc_name TEXT, \\\n",
+    "              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0, \\\n",
+    "              PRIMARY KEY (subcount_id))'\n",
+    "          )\n",
+    "\n",
+    "conn.commit()\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-73bc24d9518c>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-73bc24d9518c>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    conn.close()\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "cur = conn.cursor()"
+    "# Создадим таблицы данных sc_types\n",
+    "c.execute('CREATE TABLE IF NOT EXIST sc_types \\\n",
+    "            (sc_type TEXT NOT NULL UNIQUE)'        \n",
+    "conn.commit()\n",
+    "conn.close()"
    ]
   },
   {
