Update SQL Lite DB.ipynb

--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,18 @@
     "c = conn.cursor()\n",
     "\n",
     "# Создадим таблицы данных\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS sc_types_temp AS SELECT * FROM sc_types')\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS subcounts_temp AS SELECT * FROM subcounts')\n",
+    "c.execute('DROP TABLE IF EXISTS subcounts')\n",
+    "c.execute('DROP TABLE IF EXISTS sc_types')\n",
     "c.execute('CREATE TABLE IF NOT EXISTS sc_types (\\\n",
     "              sc_type_id INTEGER,\\\n",
     "              sc_type TEXT NOT NULL UNIQUE,\\\n",
+    "              doc INTEGER NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0, \\\n",
     "              PRIMARY KEY (sc_type_id))'\n",
     "          )\n",
+    "c.execute('INSERT INTO sc_types SELECT * FROM sc_types_temp')\n",
+    "c.execute('DROP TABLE sc_types_temp')\n",
     "c.execute('CREATE TABLE IF NOT EXISTS subcounts ( \\\n",
     "              subcount_id INTEGER, \\\n",
     "              sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id), \\\n",
@@ -24,9 +31,116 @@
     "              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0, \\\n",
     "              PRIMARY KEY (subcount_id))'\n",
     "          )\n",
+    "c.execute('INSERT INTO subcounts SELECT * FROM subcounts_temp')\n",
+    "c.execute('DROP TABLE subcounts_temp')\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS accounts ( \\\n",
+    "              account INTEGER, \\\n",
+    "              account_name TEXT NOT NULL, \\\n",
+    "              sc_type_id_1 INTEGER REFERENCES sc_types (sc_type_id), \\\n",
+    "              sc_type_id_2 INTEGER REFERENCES sc_types (sc_type_id), \\\n",
+    "              PRIMARY KEY (account)) WITHOUT ROWID'\n",
+    "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS document_types ( \\\n",
+    "              document_type_id INTEGER, \\\n",
+    "              document_type TEXT NOT NULL UNIQUE, \\\n",
+    "              PRIMARY KEY (document_type_id))'\n",
+    "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS documents ( \\\n",
+    "              document_id INTEGER, \\\n",
+    "              document_type_id INTEGER NOT NULL REFERENCES document_types (document_type_id),\\\n",
+    "              document_date TEXT CHECK (date(document_date) IS NOT NULL OR NULL), \\\n",
+    "              document_number TEXT, \\\n",
+    "              comment TEXT, \\\n",
+    "              PRIMARY KEY (document_id))'\n",
+    "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS operations ( \\\n",
+    "              operation_id INTEGER, \\\n",
+    "              value_date TEXT CHECK (date(value_date) IS NOT NULL), \\\n",
+    "              creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT (datetime(\\'now\\')), \\\n",
+    "              document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
+    "              operation_type_id INTEGER, \\\n",
+    "              registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
+    "              PRIMARY KEY (operation_id))'\n",
+    "          )\n",
+    "c.execute('CREATE VIEW IF NOT EXISTS oper_with_doc AS \\\n",
+    "                SELECT \\\n",
+    "                  operations.operation_id, \\\n",
+    "                  operations.value_date, \\\n",
+    "                  operations.document_id, \\\n",
+    "                  documents.document_id, \\\n",
+    "                  documents.document_type_id, \\\n",
+    "                  documents.document_date, \\\n",
+    "                  documents.document_number, \\\n",
+    "                  documents.comment \\\n",
+    "                FROM documents INNER JOIN operations ON documents.document_id = operations.document_id'\n",
+    "          )\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "no such table: aux.sc_types",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-140-892ea927ccfb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#             ADD doc INTEGER CHECK (doc is NULL OR doc=1) \\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#           ')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'SELECT * FROM aux.sc_types'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOperationalError\u001b[0m: no such table: aux.sc_types"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(file)\n",
+    "c = conn.cursor()\n",
+    "# c.execute('ALTER TABLE sc_types \\\n",
+    "#             ADD doc INTEGER CHECK (doc is NULL OR doc=1) \\\n",
+    "#           ')\n",
+    "data = c.execute('SELECT * FROM aux.sc_types').fetchall()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "root = Tk()\n",
+    "root.title(\"Hello World!\")\n",
+    "root.geometry('300x40')\n",
+    "\n",
+    "def button_clicked():\n",
+    "    print(\"Hello World!\")\n",
+    "\n",
+    "def close():\n",
+    "    root.destroy()\n",
+    "    root.quit()\n",
+    "\n",
+    "button = Button(root, text=\"Press Me\", command=button_clicked)\n",
+    "button.pack(fill=BOTH)\n",
+    "\n",
+    "root.protocol('WM_DELETE_WINDOW', close)\n",
+    "\n",
+    "root.mainloop()"
    ]
   },
   {
