--- a/SQL Lite DB.ipynb
+++ b/SQL Lite DB.ipynb
@@ -2,37 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
+    "import pandas as pd\n",
     "file = 'C:/Users/gdoku/YandexDisk/Компания/07 Учётные регистры и первичные документы/accounting.db'\n",
     "conn = sqlite3.connect(file)\n",
     "c = conn.cursor()\n",
     "\n",
-    "# Создадим таблицы данных\n",
-    "c.execute('CREATE TABLE IF NOT EXISTS sc_types_temp AS SELECT * FROM sc_types')\n",
-    "c.execute('CREATE TABLE IF NOT EXISTS subcounts_temp AS SELECT * FROM subcounts')\n",
-    "c.execute('DROP TABLE IF EXISTS subcounts')\n",
-    "c.execute('DROP TABLE IF EXISTS sc_types')\n",
+    "tables = c.execute(\n",
+    "    \"SELECT `name`, `sql` FROM `sqlite_master` WHERE type='table'\").fetchall()\n",
+    "\n",
+    "# Создаём временные таблицы\n",
+    "for table in tables:\n",
+    "    c.execute(\n",
+    "        \"CREATE TABLE {} AS SELECT * FROM {}\".format(table[0]+'_temp', table[0]))\n",
+    "\n",
+    "# Удаляем старые таблицы\n",
+    "for table in tables:\n",
+    "    if 'temp' not in table[0]:\n",
+    "        c.execute(\"DROP TABLE {}\".format(table[0]))\n",
+    "\n",
+    "# Создаём таблицы\n",
     "c.execute('CREATE TABLE IF NOT EXISTS sc_types (\\\n",
     "              sc_type_id INTEGER,\\\n",
     "              sc_type TEXT NOT NULL UNIQUE,\\\n",
     "              doc INTEGER NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0, \\\n",
     "              PRIMARY KEY (sc_type_id))'\n",
     "          )\n",
-    "c.execute('INSERT INTO sc_types SELECT * FROM sc_types_temp')\n",
-    "c.execute('DROP TABLE sc_types_temp')\n",
-    "c.execute('CREATE TABLE IF NOT EXISTS subcounts ( \\\n",
-    "              subcount_id INTEGER, \\\n",
-    "              sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id), \\\n",
-    "              sc_name TEXT, \\\n",
-    "              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0, \\\n",
-    "              PRIMARY KEY (subcount_id))'\n",
-    "          )\n",
-    "c.execute('INSERT INTO subcounts SELECT * FROM subcounts_temp')\n",
-    "c.execute('DROP TABLE subcounts_temp')\n",
     "c.execute('CREATE TABLE IF NOT EXISTS accounts ( \\\n",
     "              account INTEGER, \\\n",
     "              account_name TEXT NOT NULL, \\\n",
@@ -53,27 +52,45 @@
     "              comment TEXT, \\\n",
     "              PRIMARY KEY (document_id))'\n",
     "          )\n",
+    "c.execute('CREATE TABLE IF NOT EXISTS subcounts ( \\\n",
+    "              subcount_id INTEGER, \\\n",
+    "              sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id), \\\n",
+    "              sc_name TEXT, \\\n",
+    "              document_id INTEGER REFERENCES documents (document_id),\\\n",
+    "              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0, \\\n",
+    "              PRIMARY KEY (subcount_id))'\n",
+    "          )\n",
     "c.execute('CREATE TABLE IF NOT EXISTS operations ( \\\n",
-    "              operation_id INTEGER, \\\n",
-    "              value_date TEXT CHECK (date(value_date) IS NOT NULL), \\\n",
-    "              creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT (datetime(\\'now\\')), \\\n",
-    "              document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
-    "              operation_type_id INTEGER, \\\n",
-    "              registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
-    "              PRIMARY KEY (operation_id))'\n",
+    "            operation_id INTEGER,\\\n",
+    "            value_date TEXT CHECK (date(value_date) IS NOT NULL),\\\n",
+    "            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT \\'now\\', \\\n",
+    "            document_id INTEGER NOT NULL REFERENCES documents (document_id), \\\n",
+    "            operation_type_id INTEGER, \\\n",
+    "            registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0, \\\n",
+    "            PRIMARY KEY (operation_id))'\n",
     "          )\n",
-    "c.execute('CREATE VIEW IF NOT EXISTS oper_with_doc AS \\\n",
-    "                SELECT \\\n",
-    "                  operations.operation_id, \\\n",
-    "                  operations.value_date, \\\n",
-    "                  operations.document_id, \\\n",
-    "                  documents.document_id, \\\n",
-    "                  documents.document_type_id, \\\n",
-    "                  documents.document_date, \\\n",
-    "                  documents.document_number, \\\n",
-    "                  documents.comment \\\n",
-    "                FROM documents INNER JOIN operations ON documents.document_id = operations.document_id'\n",
-    "          )\n",
+    "# c.execute('CREATE VIEW IF NOT EXISTS oper_with_doc AS \\\n",
+    "#                 SELECT \\\n",
+    "#                   operations.operation_id, \\\n",
+    "#                   operations.value_date, \\\n",
+    "#                   operations.document_id, \\\n",
+    "#                   documents.document_id, \\\n",
+    "#                   documents.document_type_id, \\\n",
+    "#                   documents.document_date, \\\n",
+    "#                   documents.document_number, \\\n",
+    "#                   documents.comment \\\n",
+    "#                 FROM documents INNER JOIN operations ON documents.document_id = operations.document_id'\n",
+    "#           )\n",
+    "\n",
+    "# Копируем данные\n",
+    "for table in tables:\n",
+    "    if 'temp' not in table[0]:\n",
+    "        c.execute(\"INSERT INTO {} SELECT * FROM {}\".format(table[0], table[0]+'_temp'))\n",
+    "\n",
+    "# Удаляем временные таблицы\n",
+    "for table in tables:\n",
+    "    if 'temp' not in table[0]:\n",
+    "        c.execute(\"DROP TABLE {}\".format(table[0]+'_temp'))\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
@@ -81,19 +98,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "no such table: aux.sc_types",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-140-892ea927ccfb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#             ADD doc INTEGER CHECK (doc is NULL OR doc=1) \\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#           ')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'SELECT * FROM aux.sc_types'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: no such table: aux.sc_types"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_types\n",
+      "accounts\n",
+      "document_types\n",
+      "documents\n",
+      "subcounts\n",
+      "operations\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('sc_types_temp',\n",
+       "  'CREATE TABLE sc_types_temp(\\n  sc_type_id INT,\\n  sc_type TEXT,\\n  doc INT\\n)'),\n",
+       " ('accounts_temp',\n",
+       "  'CREATE TABLE accounts_temp(\\n  account INT,\\n  account_name TEXT,\\n  sc_type_id_1 INT,\\n  sc_type_id_2 INT\\n)'),\n",
+       " ('document_types_temp',\n",
+       "  'CREATE TABLE document_types_temp(\\n  document_type_id INT,\\n  document_type TEXT\\n)'),\n",
+       " ('documents_temp',\n",
+       "  'CREATE TABLE documents_temp(\\n  document_id INT,\\n  document_type_id INT,\\n  document_date TEXT,\\n  document_number TEXT,\\n  comment TEXT\\n)'),\n",
+       " ('subcounts_temp',\n",
+       "  'CREATE TABLE subcounts_temp(\\n  subcount_id INT,\\n  sc_type_id INT,\\n  sc_name TEXT,\\n  document_id INT,\\n  archive INT\\n)'),\n",
+       " ('operations_temp',\n",
+       "  'CREATE TABLE operations_temp(\\n  operation_id INT,\\n  value_date TEXT,\\n  creation_date TEXT,\\n  document_id INT,\\n  operation_type_id INT,\\n  registered INT\\n)'),\n",
+       " ('sc_types',\n",
+       "  'CREATE TABLE sc_types (              sc_type_id INTEGER,              sc_type TEXT NOT NULL UNIQUE,              doc INTEGER NOT NULL CHECK (doc=0 OR doc=1) DEFAULT 0,               PRIMARY KEY (sc_type_id))'),\n",
+       " ('accounts',\n",
+       "  'CREATE TABLE accounts (               account INTEGER,               account_name TEXT NOT NULL,               sc_type_id_1 INTEGER REFERENCES sc_types (sc_type_id),               sc_type_id_2 INTEGER REFERENCES sc_types (sc_type_id),               PRIMARY KEY (account)) WITHOUT ROWID'),\n",
+       " ('document_types',\n",
+       "  'CREATE TABLE document_types (               document_type_id INTEGER,               document_type TEXT NOT NULL UNIQUE,               PRIMARY KEY (document_type_id))'),\n",
+       " ('documents',\n",
+       "  'CREATE TABLE documents (               document_id INTEGER,               document_type_id INTEGER NOT NULL REFERENCES document_types (document_type_id),              document_date TEXT CHECK (date(document_date) IS NOT NULL OR NULL),               document_number TEXT,               comment TEXT,               PRIMARY KEY (document_id))'),\n",
+       " ('subcounts',\n",
+       "  'CREATE TABLE subcounts (               subcount_id INTEGER,               sc_type_id INTEGER NOT NULL REFERENCES sc_types (sc_type_id),               sc_name TEXT,               document_id INTEGER REFERENCES documents (document_id),              archive INTEGER NOT NULL CHECK (archive=0 OR archive=1) DEFAULT 0,               PRIMARY KEY (subcount_id))'),\n",
+       " ('operations',\n",
+       "  \"CREATE TABLE operations (             operation_id INTEGER,            value_date TEXT CHECK (date(value_date) IS NOT NULL),            creation_date TEXT NOT NULL CHECK (datetime(creation_date) IS NOT NULL) DEFAULT 'now',             document_id INTEGER NOT NULL REFERENCES documents (document_id),             operation_type_id INTEGER,             registered INTEGER NOT NULL CHECK (registered=0 OR registered=1) DEFAULT 0,             PRIMARY KEY (operation_id))\")]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -102,8 +160,17 @@
     "# c.execute('ALTER TABLE sc_types \\\n",
     "#             ADD doc INTEGER CHECK (doc is NULL OR doc=1) \\\n",
     "#           ')\n",
-    "data = c.execute('SELECT * FROM aux.sc_types').fetchall()\n",
-    "conn.close()"
+    "data = c.execute(\n",
+    "    \"SELECT `name`, `sql`\\\n",
+    "  FROM `sqlite_master` \\\n",
+    "  WHERE type='table'\").fetchall()\n",
+    "#data = pd.DataFrame(data)\n",
+    "for table in data:\n",
+    "    if 'temp' not in table[0]:\n",
+    "        print(table[0])\n",
+    "#    c.execute(\"DROP TABLE {}\".format(table[0]+'_temp'))\n",
+    "conn.close()\n",
+    "data"
    ]
   },
   {
